test/functional/should-fail/vsgc1859.f3
 /*
  * VSGC-1859 : public-read variable can be written from outside the script using bind with inverse
  *
  * @subtest
  *
  *  
  */
  
 import java.lang.System;
  
  public class vsgc1859{
	  public-read var s:String="Hello Everyone"; // script-only write access
  }
